Updated RDS connectivity issues.
